lintian (2.3.4) UNRELEASED; urgency=low

  * Summary of tag changes:
    + Added:
      - control-file-with-CRLF-EOLs
      - empty-binary-package
      - missing-debian-source-format
      - possible-new-upstream-release-without-new-version
      - unknown-file-in-debian-source
      - unknown-source-format

  * checks/binaries:
    + [RA] Exclude packages from the klibc source package from the
      embedded zlib check since klibc legitimately includes its own copy.
      Thanks, maximilian attems.  (Closes: #573914)
  * checks/changelog-file{,.desc}:
    + [RA] New check for a changelog entry indicating a new upstream
      release but no change in the upstream portion of the package
      version.  Idea from Emilio Pozuelo Monfort.  (Closes: #569129)
  * checks/control-file:
    + [RG] Update package-depends-on-hardcoded-libc exception to also
      exclude eglibc.  Based on a patch from Cyril Brulebois.
      (Closes: #573398)
    + [RA] Also exclude *-common packages from weak-library-dev-dependency
      checks.  Thanks, Emilio Pozuelo Monfort.  (Closes: #570408)
    + [RA] Suppress missing-separator-between-items if either of the items
      contain substvars other than *:Depends substvars, since substvars
      may be used to assemble the components of a dependency.  Thanks,
      Matthias Klose.  (Closes: #573815)
  * checks/cruft{,.desc}:
    + [RA] Provide more information in native-package-with-dash-version
      long description about how native packages can be created by
      mistake.  Thanks, Jari Aalto.  (Closes: #573839)
    + [RA] Reword source-contains-prebuilt-windows-binary long
      description.  (Closes: #574515)
    + [RG] Warn about control and changelog files with CRLF end of line
      terminators.  Thanks, Michal Čihař.  (Closes: #564713)
  * checks/debconf:
    + [RA] Don't warn about the length of the short description for
      templates of type text in udebs, since they're frequently used by