@@ -3,6 +3,7 @@ lintian (2.3.4) UNRELEASED; urgency=low
   * Summary of tag changes:
     + Added:
       - control-file-with-CRLF-EOLs
+      - debian-rules-makemaker-prefix-is-deprecated
       - empty-binary-package
       - missing-debian-source-format
       - possible-new-upstream-release-without-new-version
@@ -66,6 +67,9 @@ lintian (2.3.4) UNRELEASED; urgency=low
       Rene Engelhard.  (Closes: #572430)
     + [RG] Require a versioned build-dependency on cdbs if scons.mk or
       perl-build.mk are used.  (Closes: #574744)
+    + [RG] Warn about installing files specifying the destination
+      directory with PREFIX when Perl's MakeMaker build system is used.
+      Based on a patch by Niko Tyni.  (Closes: #568748)
   * checks/scripts:
     + [ADB] Update the list of octave interpreters, adding octave3.2
       (Closes: #574048) and removing octave2.1 (only available in lenny
